@@ -1,5 +1,13 @@
 2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
+	* src/termview.cpp,
+	src/telnetcon.h,
+	src/stringutil.cpp,
+	src/telnetview.cpp:
+	Apply some patch files from pav@FreeBSD.org.
+
+2005-07-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
 	* src/telnetview.cpp (CTelnetView::DoPasteFromClipboard):
 	Add "Auto Wrap" on paste.
 
